--- a/.dockerignore
+++ b/.dockerignore
@@ -4,40 +4,31 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
 *.egg-info/
-.installed.cfg
-*.egg
 
 # Virtual environments
 venv/
-ENV/
 env/
 .venv
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
 
 # Testing
 .pytest_cache/
 .coverage
 htmlcov/
-.tox/
+tests/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+
+# Git
+.git/
+.gitignore
+
+# Documentation
+*.md
+docs/
 
 # Environment
 .env
