--- a/requirements.in
+++ b/requirements.in
@@ -1,11 +1,13 @@
-# Core CLI dependencies - Compatible versions for Python 3.11
-typer==0.12.5
-click==8.1.7
-rich==13.7.0
+# requirements.in - High-level dependencies
+# Use: pip-compile requirements.in to generate requirements.txt
 
 # Web framework
 fastapi==0.109.0
-uvicorn==0.27.0
+uvicorn[standard]==0.27.0
+
+# CLI framework
+typer==0.12.3
+rich==13.7.0
 
 # Data validation
 pydantic==2.5.0
@@ -25,3 +27,7 @@ pytest==7.4.3
 pytest-cov==4.1.0
 pytest-asyncio==0.23.3
 httpx==0.26.0
+ruff==0.1.11
+black==23.12.1
+mypy==1.8.0
+types-pyyaml==6.0.12
